--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -11,6 +11,7 @@
   "item.nukacraft.alumi_ingot": "Aluminium Ingot",
   "item.nukacraft.aluminugget": "Aluminium Nugget",
   "item.nukacraft.bbloodleafl": "Black BloodLeaf",
+  "item.nukacraft.nukaroot": "Nuka Root",
   "item.nukacraft.beerempty": "Empty Beer Bottle",
   "item.nukacraft.brainfungus": "Brain Fungus",
   "item.nukacraft.btitan": "Black Titan Ingot",
