--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -11,6 +11,7 @@
   "item.nukacraft.alumi_ingot": "Алюминиевый Слиток",
   "item.nukacraft.aluminugget": "Кусочек Алюминия",
   "item.nukacraft.raw_alumi": "Рудный Алюминий",
+  "item.nukacraft.nukaroot": "Ядер Корень",
   "item.nukacraft.purple_reagent": "Пурпурный Реагент",
   "item.nukacraft.gold_cranberry": "Золотая Клюква",
   "item.nukacraft.nukamelon_piece": "Ломтик Мегатонн-Арбуза",
