--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -12,6 +12,8 @@
   "item.nukacraft.aluminugget": "Aluminium Nugget",
   "item.nukacraft.bbloodleafl": "Black BloodLeaf",
   "item.nukacraft.nukaroot": "Nuka Root",
+  "item.nukacraft.coral_leaf": "Coral Leaves",
+  "item.nukacraft.prism_leafs": "Prisma Leaves",
   "item.nukacraft.beerempty": "Empty Beer Bottle",
   "item.nukacraft.brainfungus": "Brain Fungus",
   "item.nukacraft.btitan": "Black Titan Ingot",
@@ -136,6 +138,8 @@
   "block.nukacraft.death_flower": "Death Flower",
   "block.nukacraft.prpltile": "Purple Tiles",
   "block.nukacraft.redtile": "Red Tiles",
+  "block.nukacraft.brocflower": "Broc Flower",
+  "block.nukacraft.invertflower": "Inverted Flower",
   "block.nukacraft.nukamelon": "NukaMelon",
   "block.nukacraft.deepalumi_block": "Deepslate Aluminium Ore",
   "block.nukacraft.deeplead_block": "Deepslate Lead Ore",
