--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -12,6 +12,8 @@
   "item.nukacraft.aluminugget": "Кусочек Алюминия",
   "item.nukacraft.raw_alumi": "Рудный Алюминий",
   "item.nukacraft.nukaroot": "Ядер Корень",
+  "item.nukacraft.coral_leaf": "Коралловые Листья",
+  "item.nukacraft.prism_leafs": "Призма Листья",
   "item.nukacraft.purple_reagent": "Пурпурный Реагент",
   "item.nukacraft.gold_cranberry": "Золотая Клюква",
   "item.nukacraft.nukamelon_piece": "Ломтик Мегатонн-Арбуза",
@@ -140,6 +142,8 @@
   "block.nukacraft.magtile": "Пурпурная Плитка",
   "block.nukacraft.prpltile": "Фиолетовая Плитка",
   "block.nukacraft.redtile": "Красная Плитка",
+  "block.nukacraft.brocflower": "Цветок Брока",
+  "block.nukacraft.invertflower": "Инвертированный Цветок",
   "block.nukacraft.vttile": "Плитка Волт-Тек",
   "block.nukacraft.dangerfloor": "Блок \"Опасно\"",
   "block.nukacraft.darkfloor": "Тёмный Пол",
