Pip Boy + Holotape

--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -28,7 +28,7 @@
   "item.nukacraft.nbloodleafi_": "Росток Кроволиста",
   "item.nukacraft.quantumleaf_": "Росток Квантового Листа",
   "item.nukacraft.gammaleaf_": "Росток Гамма Листа",
-  "item.nukacraft.pipboy_d": "§6Пип-Бой",
+  "item.nukacraft.pipboy_d": "Пип-Бой",
   "block.nukacraft.nukamelon": "Ядер-Арбуз",
   "item.nukacraft.raw_silver": "Рудное Серебро",
   "item.nukacraft.raw_lead": "Рудный Свинец",
@@ -220,18 +220,10 @@
   "block.nukacraft.gbloodleaf": "Куст Гамма Листа",
   "item.nukacraft.starberry": "Ягода Ночного Ползуна",
   "item.nukacraft.neutronpod": "Нейтронный Стручок",
-  "tooltip.nukacraft.cranberry_rad": "§cРад +0.05",
-  "tooltip.nukacraft.bombberry_rad": "§cРад +0.1",
-  "tooltip.nukacraft.mutfruit_rad": "§cРад +0.07",
-  "tooltip.nukacraft.starberry_rad": "§aРад -0.1",
-  "tooltip.nukacraft.fusfruit_rad": "§cРад +0.13",
-  "tooltip.nukacraft.neutron_rad": "§cРад +0.17",
   "block.nukacraft.qbloodleaf": "Куст Квантового Листа",
   "item.nukacraft.nukafrutti": "Ядер Фрутти",
   "block.nukacraft.copper_block": "Медный Блок",
-  "effect.nukacraft.tea_rad": "§cРад +0.04",
-  "tooltip.nukacraft.tea_regen": "§9Регенерация (0:10)",
-  "tooltip.nukacraft.cola_rad+": "§cРад +0.08",
+  "tooltip.nukacraft.regen": "§9Регенерация ",
   "item.nukacraft.applesp": "Наливные яблоки",
   "item.nukacraft.aster_tea": "Чай с Астрой",
   "item.nukacraft.cram": "Готовый завтрак",
@@ -240,14 +232,13 @@
   "item.nukacraft.cottoncandy": "Сахарная вата",
   "item.nukacraft.bubbleapple": "Жвачка с Яблоком",
   "item.nukacraft.watercola": "Бутылка Воды",
-  "tooltip.nukacraft.bubblegum1" : "§9Прыгучесть (0:05)",
-  "tooltip.nukacraft.radfood" : "§cРад +0.08",
+  "tooltip.nukacraft.jumpboost" : "§9Прыгучесть ",
   "item.nukacraft.fcakes": "Кексы «Весёлые ребята»",
   "item.nukacraft.maccheese": "Макароны с сыром «Бламко»",
   "item.nukacraft.sweet_aster_tea": "Сладкий Чай с Астрой",
   "item.nukacraft.ash_tea": "Чай с Пепельной Розой",
   "item.nukacraft.xander_root": "Корень Сандер",
-  "tooltip.nukacraft.tea_haste": "§9Спешка (0:10)",
+  "tooltip.nukacraft.haste": "§9Спешка ",
   "tooltip.nukacraft.tea_thistle": "§7Он неприятен на вкус, однако притупляет голод",
   "item.nukacraft.sweet_ash_tea": "Сладкий Чай с Пепельной Розой",
   "item.nukacraft.thistle_tea": "Чай с Чертополохом",
@@ -255,23 +246,17 @@
   "item.nukacraft.vegsoup": "Овощной суп",
   "item.nukacraft.tato_salad": "Салат из Тошки",
   "item.nukacraft.sittsoup": "Илофасолевый Суп",
-  "effect.nukacraft.stimpak": "§9Здоровье +5",
-  "effect.nukacraft.super_stimpak": "§9Здоровье +8",
-  "effect.nukacraft.radaway": "§aРад -4.0",
+  "effect.nukacraft.health": "§9Здоровье ",
   "item.nukacraft.radaway": "Антирадин",
-  "effect.nukacraft.glowblood": "§4§lРад +3.0",
-  "effect.nukacraft.rad_shield": "§9Рад-Защита (0:30)",
+  "effect.nukacraft.rad_shield": "§9Рад-Защита ",
   "item.nukacraft.radx": "Рад-X",
-  "key.nukacraft.pipboy": "Активация Пип-Боя",
   "item.nukacraft.glowblood": "Светящаяся Кровь",
   "effect.nukacraft.glowing": "§2Светится!",
   "item.nukacraft.super_stimpak": "Супер Стимулятор",
   "item.nukacraft.stimpak": "Стимулятор",
   "item.nukacraft.sittpuree": "Илофасолевое Пюре",
-  "tooltip.nukacraft.fm_fireres": "§9Огнестойкость (0:10)",
   "item.nukacraft.firemushsoup": "Суп из Огнегриба",
   "block.nukacraft.gutshroom": "Нутрянной гриб",
-  "tooltip.nukacraft.rad_xander": "§cРад +0.3",
   "item.nukacraft.agave_fruit": "Фрукт Огавы",
   "item.nukacraft.punga_fruit": "Фрукт Пунги",
   "item.nukacraft.neoagave_fruit": "Фрукт Неоновой Огавы",
@@ -279,29 +264,43 @@
   "block.nukacraft.bblight": "Яркая Чума",
   "item.nukacraft.filter": "Фильтр для Воды",
   "item.nukacraft.firemushpuree": "Пюре из Огнегриба",
-  "tooltip.nukacraft.cola_rad-": "§aРад -0.09",
-  "effect.nukacraft.speed": "§9Скорость (0:10)",
-  "effect.nukacraft.radres_berry": "§9Рад-Защита (0:05)",
-  "tooltip.nukacraft.bush_fire": "§9Огнестойкость (0:05)",
-  "tooltip.nukacraft.rad_effect1": "§cРад +0.1",
+  "effect.nukacraft.speed": "§9Скорость ",
+
+  "tooltip.nukacraft.irradiation": "§aРад ",
+  "tooltip.nukacraft.radiation": "§cРад ",
+  "tooltip.nukacraft.fire_res": "§9Огнестойкость ",
+  "item.nukacraft.pimpboy": "§6Пимп-Бой",
 
 
+  "item.nukacraft.holotape_white": "Цветовая Голозапись",
+  "item.nukacraft.holotape_green": "Цветовая Голозапись",
+  "tooltip.nukacraft.holotape#white": "§7Цветовая схема: §fБелая",
+  "tooltip.nukacraft.holotape#green": "§7Цветовая схема: §2Зелёная",
 
-
-
-
-
-
+  "pipboy.nukacraft.screencolor": "§7Цвет Дисплея: ",
+  "pipboy.nukacraft.handselect": "§7Когда в левой руке: ",
+  "pipboy.nukacraft.clicks": "§7Shift+ПКМ: Открыть Пип-Бой",
+  "color.display.green": "§2Зелёный",
+  "color.display.white": "§fБелый",
 
   "archive.nukacraft.vaultboy.name": "▪ Дорогой Резидент Убежища!",
 
   "archivepage.nukacraft.vaultboy1.string_d1": "Дорогой Резидент, ты получил Пип-Бой!",
   "archivepage.nukacraft.vaultboy1.string_d2": "Он необходим для хранения информации",
   "archivepage.nukacraft.vaultboy1.string_d3": "а также для чтения голодисков",
-  "archivepage.nukacraft.vaultboy1.string_d4": "Увидимся в светлом будущем!",
+  "archivepage.nukacraft.vaultboy1.string_d4": "Пока он находится на твоей руке",
+  "archivepage.nukacraft.vaultboy1.string_d5": "ты можешь загрузить любой голодиск",
+  "archivepage.nukacraft.vaultboy1.string_d6": "содержимое которого будет записано",
+
 
   "archivepage.nukacraft.warn.string_d1": "Попытка чтения памяти...",
   "archivepage.nukacraft.warn.string_d2": "Ошибок(9)... Повторное чтение",
   "archivepage.nukacraft.warn.string_d3": "Отчёт: Ошибок(2): Память пустая",
-  "archivepage.nukacraft.warn.string_d5": "'Свяжитесь с РобКо'"
+  "archivepage.nukacraft.warn.string_d5": "'Свяжитесь с РобКо'",
+
+
+  "archive.nukacraft.pip_os.string1": "    Copyright 2076 ROBCO INDUSTRIES",
+  "archive.nukacraft.pip_os.string2": "                  -Отчёт 1-        ",
+  "archive.nukacraft.pip_os.string2_1": "                 -Архивы 1-        ",
+  "archive.nukacraft.pip_os.string3": "-----------------------------------"
 }
