--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -62,7 +62,7 @@
   "item.nukacraft.nbloodleafi_": "Bloodleaf Bush",
   "item.nukacraft.quantumleaf_": "Quantleaf Bush",
   "item.nukacraft.gammaleaf_": "Gammaleaf Bush",
-  "item.nukacraft.pipboy_d": "§6Pip-Boy",
+  "item.nukacraft.pipboy_d": "Pip-Boy",
   "item.nukacraft.leatherhard": "Hardened Leather",
   "item.nukacraft.magnet": "Magnet",
   "item.nukacraft.nbloodleafi": "Bloodleaf",
@@ -232,15 +232,10 @@
   "item.nukacraft.maccheese": "BlamCo Mac & Cheese",
   "item.nukacraft.pures": "InstaMash",
   "item.nukacraft.cottoncandy": "Cotton Candy Bites",
-  "tooltip.nukacraft.bubblegum1" : "§9Jump Boost (0:05)",
-  "tooltip.nukacraft.radfood" : "§cRad +0.08",
+  "tooltip.nukacraft.jumpboost" : "§9Jump Boost ",
   "block.nukacraft.gbloodleaf": "Gammaleaf Bush",
   "block.nukacraft.bbloodleaf": "Black Bloodleaf Bush",
   "item.nukacraft.starberry": "Starlight Berry",
-  "tooltip.nukacraft.cranberry_rad": "§cRad +0.05",
-  "tooltip.nukacraft.bombberry_rad": "§cRad +0.1",
-  "tooltip.nukacraft.mutfruit_rad": "§cRad +0.07",
-  "tooltip.nukacraft.fusfruit_rad": "§cRad +0.13",
   "item.nukacraft.bubbleapple": "Apple Bubblegum",
   "item.nukacraft.watercola": "Water Cola Bottle",
   "item.nukacraft.aster_tea": "Aster Tea",
@@ -248,28 +243,18 @@
   "item.nukacraft.sweet_ash_tea": "Sweet Ash Rose Tea",
   "item.nukacraft.sweet_aster_tea": "Sweet Aster Tea",
   "item.nukacraft.coppercond": "Copper Radiator",
-  "tooltip.nukacraft.starberry_rad": "§aRad -0.1",
-  "tooltip.nukacraft.neutron_rad": "§cRad +0.17",
-  "tooltip.nukacraft.bush_fire": "§9Fire Resistance (0:05)",
-  "tooltip.nukacraft.cola_rad+": "§cRad +0.08",
-  "tooltip.nukacraft.tea_haste": "§9Haste (0:10)",
-  "tooltip.nukacraft.rad_xander": "§cRad +0.3",
+  "tooltip.nukacraft.haste": "§9Haste ",
   "item.nukacraft.xander_root": "Xander Root",
-  "tooltip.nukacraft.fm_fireres": "§9Fire Resistance (0:10)",
   "item.nukacraft.firemushsoup": "Firemushroom Soup",
   "item.nukacraft.firemushpuree": "Firemushroom Puree",
   "item.nukacraft.filter": "Water Filter",
   "item.nukacraft.stimpak": "Stimpak",
-  "effect.nukacraft.stimpak": "§9Health +5",
-  "effect.nukacraft.super_stimpak": "§9Health +8",
-  "effect.nukacraft.radaway": "§aRad -4.0",
+  "effect.nukacraft.health": "§9Health ",
   "item.nukacraft.radaway": "Rad Away",
-  "effect.nukacraft.glowblood": "§4§lRad +3.0",
   "item.nukacraft.glowblood": "Glow Blood",
   "effect.nukacraft.glowing": "§2Glowing!",
-  "effect.nukacraft.rad_shield": "§9Rad Resistance (0:30)",
+  "effect.nukacraft.rad_shield": "§9Rad Resistance ",
   "item.nukacraft.radx": "Rad-X",
-  "key.nukacraft.pipboy": "Pip-Boy Activation",
   "item.nukacraft.super_stimpak": "Super Stimpak",
   "tooltip.nukacraft.tea_thistle": "§7It tastes bad, but it dulls your hunger",
   "item.nukacraft.thistle_tea": "Thistle Tea",
@@ -278,24 +263,48 @@
   "item.nukacraft.tato_salad": "Tato Salad",
   "item.nukacraft.sittsoup": "Sitt Soup",
   "item.nukacraft.sittpuree": "Sitt Puree",
-  "effect.nukacraft.tea_rad": "§cRad +0.04",
-  "tooltip.nukacraft.tea_regen": "§9Regeneration (0:10)",
-  "effect.nukacraft.radres_berry": "§9Rad Resistance (0:05)",
-  "tooltip.nukacraft.cola_rad-": "§aRad -0.09",
-  "effect.nukacraft.speed": "§9Speed (0:10)",
-  "tooltip.nukacraft.rad_effect1": "§cRad +0.1",
+  "tooltip.nukacraft.regen": "§9Regeneration ",
+  "effect.nukacraft.speed": "§9Speed ",
+
+
+  "tooltip.nukacraft.irradiation": "§aRad ",
+  "tooltip.nukacraft.radiation": "§cRad ",
+  "tooltip.nukacraft.fire_res": "§9Fire Resistance ",
+
+  "item.nukacraft.holotape_white": "Color Holotape",
+  "item.nukacraft.holotape_green": "Color Holotape",
+  "tooltip.nukacraft.holotape#white": "§7Color Scheme: §fWhite",
+  "tooltip.nukacraft.holotape#green": "§7Color Scheme: §2Green",
+
+  "item.nukacraft.pimpboy": "§6Pimp-Boy",
 
 
 
 
+  "pipboy.nukacraft.screencolor": "§7Interface Color: ",
+  "pipboy.nukacraft.handselect": "§7When in the left hand: ",
+  "pipboy.nukacraft.clicks": "§7Shift+RMB: Open Pip-Boy",
+  "color.display.green": "§2Green",
+  "color.display.white": "§fWhite",
+
+
+
+
+
+
+  "archive.nukacraft.pip_os.string1": "    Copyright 2076 ROBCO INDUSTRIES",
+  "archive.nukacraft.pip_os.string2": "                 -Report 1-        ",
+  "archive.nukacraft.pip_os.string2_1": "                -Archives 1-        ",
+  "archive.nukacraft.pip_os.string3": "-----------------------------------",
 
   "archive.nukacraft.vaultboy.name": "▪ Dear Shelter Resident!",
 
   "archivepage.nukacraft.vaultboy1.string_d1": "Dear Resident, there you have it Pip-Boy!",
   "archivepage.nukacraft.vaultboy1.string_d2": "Necessary for storing information",
   "archivepage.nukacraft.vaultboy1.string_d3": "and for reading holodiscs",
-  "archivepage.nukacraft.vaultboy1.string_d4": "Meet me in the bright future!",
-
+  "archivepage.nukacraft.vaultboy1.string_d4": "While he's on his left hand",
+  "archivepage.nukacraft.vaultboy1.string_d5": "You can download any holotape",
+  "archivepage.nukacraft.vaultboy1.string_d6": "whose contents will be written",
 
 
 
