New Attachment, Fixes

--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -85,7 +85,9 @@
   "item.nukacraft.nbloodleafi_": "Bloodleaf Bush",
   "item.nukacraft.quantumleaf_": "Quantleaf Bush",
   "item.nukacraft.gammaleaf_": "Gammaleaf Bush",
-  "item.nukacraft.pipboy_d": "Pip-Boy",
+  "item.nukacraft.old_scope": "Old Scope",
+  "item.nukacraft.hunting_scope": "Hunting Scope",
+  "item.nukacraft.old_silencer": "Old Silencer",
   "item.nukacraft.leatherhard": "Hardened Leather",
   "item.nukacraft.magnet": "Magnet",
   "item.nukacraft.nbloodleafi": "Bloodleaf",
