--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -181,6 +181,9 @@
   "block.nukacraft.dead_coralleaf": "Сухой Коралловый Лист",
   "block.nukacraft.zander": "Корень Сандера",
   "biome.nukacraft.ash_heap": "Шлаковая Бездна",
+  "item.nukacraft.old_scope": "Старая Оптика",
+  "item.nukacraft.hunting_scope": "Охотничья Оптика",
+  "item.nukacraft.old_silencer": "Старый Глушитель",
   "biome.nukacraft.cranberry_bog": "Клюквенное Болото",
   "biome.nukacraft.glow_sea": "Светящееся Море",
   "biome.nukacraft.poison_valley": "Ядовитая Долина",
