--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -28,7 +28,7 @@
   "item.nukacraft.classic10mm_zapaway": "Classic 10mm Pistol",
   "item.nukacraft.magazine_t1": "Tier 1 Magazine",
   "item.nukacraft.magazine_t2": "Tier 2 Magazine",
-  "item.nukacraft.magazine_t3": "Tier 3 Magazine",
+  "item.nukacraft.magazine_t3": "§cTier 3 Magazine",
   "attachment.nukacraft.magazine": "§8Installed in the 'UnderBarrel' slot.",
   "item.nukacraft.pipepistol": "Pipe Pistol",
   "item.nukacraft.alumi_ingot": "Aluminium Ingot",
@@ -88,6 +88,11 @@
   "item.nukacraft.old_scope": "Old Scope",
   "item.nukacraft.hunting_scope": "Hunting Scope",
   "item.nukacraft.old_silencer": "Old Silencer",
+  "item.nukacraft.gunner_scope": "Gunner Scope",
+  "item.nukacraft.handmade_collimator": "Handmade Collimator",
+  "item.nukacraft.handmade_scope": "Handmade Scope",
+  "item.nukacraft.handmade_stock": "Handmade Stock",
+  "item.nukacraft.handmade_flashhider": "Handmade Flash Hidder",
   "item.nukacraft.leatherhard": "Hardened Leather",
   "item.nukacraft.magnet": "Magnet",
   "item.nukacraft.nbloodleafi": "Bloodleaf",
