--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -17,7 +17,7 @@
   "item.nukacraft.classic10mm": "Классический 10мм Пистолет",
   "item.nukacraft.magazine_t1": "Магазин 1 Уровня",
   "item.nukacraft.magazine_t2": "Магазин 2 Уровня",
-  "item.nukacraft.magazine_t3": "Магазин 3 Уровня",
+  "item.nukacraft.magazine_t3": "§cМагазин 3 Уровня",
   "attachment.nukacraft.magazine": "§8Устанавливается в слот 'Подствольник'",
   "item.nukacraft.coral_leaf": "Коралловые Листья",
   "item.nukacraft.spoiled_tato": "Тухлая Тошка",
@@ -182,6 +182,11 @@
   "block.nukacraft.zander": "Корень Сандера",
   "biome.nukacraft.ash_heap": "Шлаковая Бездна",
   "item.nukacraft.old_scope": "Старая Оптика",
+  "item.nukacraft.gunner_scope": "Стрелковая Оптика",
+  "item.nukacraft.handmade_collimator": "Самодельный Коллиматор",
+  "item.nukacraft.handmade_stock": "Самодельная Ложа",
+  "item.nukacraft.handmade_flashhider": "Самодельный Пламегаситель",
+  "item.nukacraft.handmade_scope": "Самодельная Оптика",
   "item.nukacraft.hunting_scope": "Охотничья Оптика",
   "item.nukacraft.old_silencer": "Старый Глушитель",
   "biome.nukacraft.cranberry_bog": "Клюквенное Болото",
