--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -21,6 +21,8 @@
   "item.nukacraft.shotshell": "Shotgun Shell",
   "item.nukacraft.round127": "12.7mm Round",
   "item.nukacraft.round22": "22LR Round",
+  "item.nukacraft.fatman": "§cFatman",
+  "item.nukacraft.mini_nuke": "§cMini Nuke",
   "item.nukacraft.pistol10mm": "10mm Pistol",
   "item.nukacraft.scout10mm": "Scout 10mm Pistol",
   "item.nukacraft.classic10mm": "Classic 10mm Pistol",
