--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -34,6 +34,8 @@
   "item.nukacraft.round380": ".380 Патрон",
   "item.nukacraft.round556": "Патрон 5.56",
   "item.nukacraft.shotshell": "Патрон Дробовика",
+  "item.nukacraft.fatman": "§cТолстяк",
+  "item.nukacraft.mini_nuke": "§cЯдерный Минизаряд",
   "item.nukacraft.army_silencer": "Армейский Глушитель",
   "item.nukacraft.pistol10mm": "10мм Пистолет",
   "item.nukacraft.scout10mm": "10мм Пистолет Разведчика",
