--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -4,7 +4,8 @@
   "item.nukacraft.adncan": "Advanced Circuit Board",
   "item.nukacraft.advmag": "Advanced Magnet",
   "itemGroup.nuka_material": "Nuka-Craft: Miscellaneous",
-  "itemGroup.nuka_equip": "Nuka-Craft: Equipment",
+  "itemGroup.nuka_equip": "Nuka-Craft: Weapons",
+  "itemGroup.nuka_armor": "Nuka-Craft: Armors",
   "itemGroup.nuka_foods": "Nuka-Craft: Foods",
   "item.nukacraft.aimproccesor": "Circuit Board",
   "item.nukacraft.antisept": "Antiseptic",
@@ -23,6 +24,38 @@
   "item.nukacraft.round22": "22LR Round",
   "item.nukacraft.fatman": "§cFatman",
   "item.nukacraft.mini_nuke": "§cMini Nuke",
+  "item.nukacraft.wood_helmet": "Wooden Helmet",
+  "item.nukacraft.wood_body": "Wooden Chest",
+  "item.nukacraft.wood_leggins": "Wooden Leggins",
+  "item.nukacraft.wood_boots": "Wooden Boots",
+  "item.nukacraft.wood2_helmet": "Wooden Helmet",
+  "item.nukacraft.wood2_body": "Wooden Chest",
+  "item.nukacraft.wood2_leggins": "Wooden Leggins",
+  "item.nukacraft.wood2_boots": "Wooden Boots",
+  "item.nukacraft.wood3_helmet": "Wooden Helmet",
+  "item.nukacraft.wood3_body": "Wooden Chest",
+  "item.nukacraft.wood3_leggins": "Wooden Leggins",
+  "item.nukacraft.wood3_boots": "Wooden Boots",
+  "item.nukacraft.wood4_helmet": "Wooden Helmet",
+  "item.nukacraft.wood4_body": "Wooden Chest",
+  "item.nukacraft.wood4_leggins": "Wooden Leggins",
+  "item.nukacraft.wood4_boots": "Wooden Boots",
+  "item.nukacraft.wood5_helmet": "Wooden Helmet",
+  "item.nukacraft.wood5_body": "Wooden Chest",
+  "item.nukacraft.wood5_leggins": "Wooden Leggins",
+  "item.nukacraft.wood5_boots": "Wooden Boots",
+  "item.nukacraft.wood6_helmet": "Wooden Helmet",
+  "item.nukacraft.wood6_body": "Wooden Chest",
+  "item.nukacraft.wood6_leggins": "Wooden Leggins",
+  "item.nukacraft.wood6_boots": "Wooden Boots",
+  "item.nukacraft.wood7_helmet": "Wooden Helmet",
+  "item.nukacraft.wood7_body": "Wooden Chest",
+  "item.nukacraft.wood7_leggins": "Wooden Leggins",
+  "item.nukacraft.wood7_boots": "Wooden Boots",
+  "item.nukacraft.wood8_helmet": "Wooden Helmet",
+  "item.nukacraft.wood8_body": "Wooden Chest",
+  "item.nukacraft.wood8_leggins": "Wooden Leggins",
+  "item.nukacraft.wood8_boots": "Wooden Boots",
   "item.nukacraft.pistol10mm": "10mm Pistol",
   "item.nukacraft.scout10mm": "Scout 10mm Pistol",
   "item.nukacraft.classic10mm": "Classic 10mm Pistol",
