--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -5,7 +5,8 @@
   "item.nukacraft.advmag": "Продвинутый Mагнит",
   "itemGroup.nuka_material": "Nuka-Craft: Материалы",
   "itemGroup.nuka_foods": "Nuka-Craft: Пища и Напитки",
-  "itemGroup.nuka_equip": "Nuka-Craft: Экипировка",
+  "itemGroup.nuka_equip": "Nuka-Craft: Оружие",
+  "itemGroup.nuka_armor": "Nuka-Craft: Броня",
   "item.nukacraft.aimproccesor": "Печатная Плата",
   "item.nukacraft.antisept": "Антисептик",
   "item.nukacraft.alumicond": "Алюминиевый Радиатор",
@@ -36,6 +37,10 @@
   "item.nukacraft.shotshell": "Патрон Дробовика",
   "item.nukacraft.fatman": "§cТолстяк",
   "item.nukacraft.mini_nuke": "§cЯдерный Минизаряд",
+  "item.nukacraft.wood_helmet": "Деревянный Шлем",
+  "item.nukacraft.wood_body": "Деревянный Нагрудник",
+  "item.nukacraft.wood_leggins": "Деревянные Поножи",
+  "item.nukacraft.wood_boots": "Деревянная Обувь",
   "item.nukacraft.army_silencer": "Армейский Глушитель",
   "item.nukacraft.pistol10mm": "10мм Пистолет",
   "item.nukacraft.scout10mm": "10мм Пистолет Разведчика",
