--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -22,8 +22,8 @@
   "item.nukacraft.shotshell": "Shotgun Shell",
   "item.nukacraft.round127": "12.7mm Round",
   "item.nukacraft.round22": "22LR Round",
-  "item.nukacraft.fatman": "§cFatman",
-  "item.nukacraft.mini_nuke": "§cMini Nuke",
+  "item.nukacraft.fatman": "§cFatman★★",
+  "item.nukacraft.mini_nuke": "§cMini Nuke★★",
   "item.nukacraft.wood_helmet": "Wooden Helmet",
   "item.nukacraft.wood_body": "Wooden Chest",
   "item.nukacraft.wood_leggins": "Wooden Leggins",
@@ -60,10 +60,32 @@
   "item.nukacraft.scout10mm": "Scout 10mm Pistol",
   "item.nukacraft.classic10mm": "Classic 10mm Pistol",
   "item.nukacraft.piperevolver": "Pipe Revolver",
+  "item.nukacraft.abraxo_cleaner": "Abraxo Cleaner",
+  "item.nukacraft.army_circuit": "Military-grade Circuit",
+  "item.nukacraft.electrite_divider": "Electrite Divider",
+  "item.nukacraft.electrite_sheat": "Electrite Sheat",
+  "item.nukacraft.quartz_sheat": "Quartz Sheat",
+  "item.nukacraft.quartz_piece": "Quartz Piece",
+  "item.nukacraft.quartz_plate": "Quartz Plate",
+  "item.nukacraft.silicate": "Silicate Powder",
+  "item.nukacraft.ultracite_divider": "§cUltracite Divider★★",
+  "item.nukacraft.ultracite_sheat": "§aUltracite Sheat★",
+  "item.nukacraft.whitebrick": "White Brick",
+  "item.nukacraft.gilded_lead": "Gilded Lead Plate",
+  "item.nukacraft.inda_abraxo_cleaner": "Industrial Abraxo Cleaner",
+  "item.nukacraft.quartz_divider": "§aQuartz Divider★",
+  "item.nukacraft.piezonucleic_divider": "§6Piezonucleic Divider★★★",
+  "block.nukacraft.whitebricks": "White Bricks",
+  "block.nukacraft.moss_whitebricks": "Mossy White Bricks",
+  "block.nukacraft.whitebricks_stairs": "White Brick Stairs",
+  "block.nukacraft.smooth_brick": "Smooth Bricks",
+  "block.nukacraft.quarts_ore": "Quartz Ore",
+  "block.nukacraft.deepquarts_ore": "Deepslate Quartz Ore",
+  "block.nukacraft.whitebricks_slab": "White Brick Slab",
   "item.nukacraft.classic10mm_zapaway": "Classic 10mm Pistol",
   "item.nukacraft.magazine_t1": "Tier 1 Magazine",
-  "item.nukacraft.magazine_t2": "Tier 2 Magazine",
-  "item.nukacraft.magazine_t3": "§cTier 3 Magazine",
+  "item.nukacraft.magazine_t2": "§aTier 2 Magazine★",
+  "item.nukacraft.magazine_t3": "§cTier 3 Magazine★★",
   "attachment.nukacraft.magazine": "§8Installed in the 'UnderBarrel' slot.",
   "item.nukacraft.pipepistol": "Pipe Pistol",
   "item.nukacraft.alumi_ingot": "Aluminium Ingot",
@@ -97,8 +119,8 @@
   "item.nukacraft.scarletflux": "Scarlet Flux",
   "item.nukacraft.undscarletflux": "Raw Scarlet Flux",
   "item.nukacraft.cleanscarletflux": "Pure Scarlet Flux",
-  "item.nukacraft.uraniumflux": "Uranium Flux",
-  "item.nukacraft.cleanuraniumflux": "Pure Uranium Flux",
+  "item.nukacraft.uraniumflux": "§aUranium Flux★",
+  "item.nukacraft.cleanuraniumflux": "§aPure Uranium Flux★",
   "item.nukacraft.violetflux": "Violet Flux",
   "item.nukacraft.undvioletflux": "Raw Violet Flux",
   "item.nukacraft.cleanvioletflux": "Pure Violet Flux",
@@ -349,7 +371,7 @@
   "tooltip.nukacraft.holotape#white": "§7Color Scheme: §fWhite",
   "tooltip.nukacraft.holotape#green": "§7Color Scheme: §2Green",
 
-  "item.nukacraft.pimpboy": "§6Pimp-Boy",
+  "item.nukacraft.pimpboy": "§6Pimp-Boy★★★",
 
 
 
