--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -12,13 +12,35 @@
   "item.nukacraft.alumicond": "Алюминиевый Радиатор",
   "item.nukacraft.alumi_ingot": "Алюминиевый Слиток",
   "item.nukacraft.aluminugget": "Кусочек Алюминия",
+  "block.nukacraft.whitebricks": "Белые Кирпичи",
+  "item.nukacraft.abraxo_cleaner": "Чистящее Средство «Абраксо»",
+  "item.nukacraft.army_circuit": "Военная Электросхема",
+  "item.nukacraft.electrite_divider": "Электритовый Делитель",
+  "item.nukacraft.electrite_sheat": "Электритовая Оболочка",
+  "item.nukacraft.quartz_sheat": "Кварцевая Оболочка",
+  "item.nukacraft.quartz_piece": "Кварцевый Обломок",
+  "item.nukacraft.quartz_plate": "Кварцевая Пластина",
+  "item.nukacraft.silicate": "Силикатный Порошок",
+  "item.nukacraft.whitebrick": "Белый Кирпич",
+  "item.nukacraft.ultracite_sheat": "§cУльтрацитовая Оболочка★",
+  "item.nukacraft.ultracite_divider": "§cУльтрацитовый Делитель★★",
+  "item.nukacraft.gilded_lead": "Позолоченная Свинцовая Пластина",
+  "item.nukacraft.inda_abraxo_cleaner": "Пром. Чистящее Средство «Абраксо»",
+  "item.nukacraft.piezonucleic_divider": "§6Пъезоядерный Делитель★★★",
+  "item.nukacraft.quartz_divider": "§aКварцевый Делитель★",
+  "block.nukacraft.moss_whitebricks": "Замшелые Белые Кирпичи",
+  "block.nukacraft.whitebricks_stairs": "Белые Кирпичные Ступеньки",
+  "block.nukacraft.whitebricks_slab": "Белая Кирпичная Плита",
+  "block.nukacraft.smooth_brick": "Гладкая Плитка",
   "item.nukacraft.raw_alumi": "Рудный Алюминий",
   "item.nukacraft.nukaroot": "Ядер Корень",
+  "block.nukacraft.quarts_ore": "Кварцевая Руда",
+  "block.nukacraft.deepquarts_ore": "Кварценосный Глубинный Сланец",
   "item.nukacraft.round38": ".38 Патрон",
   "item.nukacraft.classic10mm": "Классический 10мм Пистолет",
   "item.nukacraft.magazine_t1": "Магазин 1 Уровня",
-  "item.nukacraft.magazine_t2": "Магазин 2 Уровня",
-  "item.nukacraft.magazine_t3": "§cМагазин 3 Уровня",
+  "item.nukacraft.magazine_t2": "§aМагазин 2 Уровня★",
+  "item.nukacraft.magazine_t3": "§cМагазин 3 Уровня★★",
   "attachment.nukacraft.magazine": "§8Устанавливается в слот 'Подствольник'",
   "item.nukacraft.coral_leaf": "Коралловые Листья",
   "item.nukacraft.spoiled_tato": "Тухлая Тошка",
@@ -35,8 +57,8 @@
   "item.nukacraft.round380": ".380 Патрон",
   "item.nukacraft.round556": "Патрон 5.56",
   "item.nukacraft.shotshell": "Патрон Дробовика",
-  "item.nukacraft.fatman": "§cТолстяк",
-  "item.nukacraft.mini_nuke": "§cЯдерный Минизаряд",
+  "item.nukacraft.fatman": "§cТолстяк★★",
+  "item.nukacraft.mini_nuke": "§cЯдерный Минизаряд★★",
   "item.nukacraft.wood_helmet": "Деревянный Шлем",
   "item.nukacraft.wood_body": "Деревянный Нагрудник",
   "item.nukacraft.wood_leggins": "Деревянные Поножи",
@@ -86,8 +108,8 @@
   "item.nukacraft.scarletflux": "Алый Флюс",
   "item.nukacraft.undscarletflux": "Сырой Алый Флюс",
   "item.nukacraft.cleanscarletflux": "Чистейщий Алый Флюс",
-  "item.nukacraft.uraniumflux": "Урановый Флюс",
-  "item.nukacraft.cleanuraniumflux": "Чистейщий Урановый Флюс",
+  "item.nukacraft.uraniumflux": "§aУрановый Флюс★",
+  "item.nukacraft.cleanuraniumflux": "§aЧистейщий Урановый Флюс★",
   "item.nukacraft.violetflux": "Фиолетовый Флюс",
   "item.nukacraft.undvioletflux": "Сырой Фиолетовый Флюс",
   "item.nukacraft.cleanvioletflux": "Чистейщий Фиолетовый Флюс",
@@ -314,7 +336,7 @@
   "tooltip.nukacraft.irradiation": "§aРад ",
   "tooltip.nukacraft.radiation": "§cРад ",
   "tooltip.nukacraft.fire_res": "§9Огнестойкость ",
-  "item.nukacraft.pimpboy": "§6Пимп-Бой",
+  "item.nukacraft.pimpboy": "§6Пимп-Бой★★★",
 
 
   "item.nukacraft.holotape_white": "Цветовая Голозапись",
