--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -397,7 +397,7 @@
   "archivepage.nukacraft.vaultboy1.string_d1": "Dear Resident, there you have it Pip-Boy!",
   "archivepage.nukacraft.vaultboy1.string_d2": "Necessary for storing information",
   "archivepage.nukacraft.vaultboy1.string_d3": "and for reading holodiscs",
-  "archivepage.nukacraft.vaultboy1.string_d4": "While he's on his left hand",
+  "archivepage.nukacraft.vaultboy1.string_d4": "While it's on his left hand",
   "archivepage.nukacraft.vaultboy1.string_d5": "You can download any holotape",
   "archivepage.nukacraft.vaultboy1.string_d6": "whose contents will be written",
 
