--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -71,6 +71,9 @@
   "item.nukacraft.ultracite_divider": "§cUltracite Divider★★",
   "item.nukacraft.ultracite_sheat": "§aUltracite Sheat★",
   "item.nukacraft.whitebrick": "White Brick",
+  "item.nukacraft.minigun": "§cMinigun★★",
+  "block.nukacraft.quarts_ore": "Quartz Ore",
+  "block.nukacraft.deepquarts_ore": "Deepslate Quartz Ore",
   "item.nukacraft.gilded_lead": "Gilded Lead Plate",
   "item.nukacraft.inda_abraxo_cleaner": "Industrial Abraxo Cleaner",
   "item.nukacraft.quartz_divider": "§aQuartz Divider★",
@@ -79,8 +82,6 @@
   "block.nukacraft.moss_whitebricks": "Mossy White Bricks",
   "block.nukacraft.whitebricks_stairs": "White Brick Stairs",
   "block.nukacraft.smooth_brick": "Smooth Bricks",
-  "block.nukacraft.quarts_ore": "Quartz Ore",
-  "block.nukacraft.deepquarts_ore": "Deepslate Quartz Ore",
   "block.nukacraft.whitebricks_slab": "White Brick Slab",
   "item.nukacraft.classic10mm_zapaway": "Classic 10mm Pistol",
   "item.nukacraft.magazine_t1": "Tier 1 Magazine",
