--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -22,6 +22,7 @@
   "item.nukacraft.quartz_plate": "Кварцевая Пластина",
   "item.nukacraft.silicate": "Силикатный Порошок",
   "item.nukacraft.whitebrick": "Белый Кирпич",
+  "item.nukacraft.minigun": "§cМиниган★★",
   "item.nukacraft.ultracite_sheat": "§cУльтрацитовая Оболочка★",
   "item.nukacraft.ultracite_divider": "§cУльтрацитовый Делитель★★",
   "item.nukacraft.gilded_lead": "Позолоченная Свинцовая Пластина",
