--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -347,7 +347,7 @@
   "item.nukacraft.stimpak": "Stimpak",
   "effect.nukacraft.health": "§9Health ",
   "item.nukacraft.radaway": "Rad Away",
-  "item.nukacraft.glowblood": "Glow Blood",
+  "item.nukacraft.glowblood": "Glowing Blood",
   "effect.nukacraft.glowing": "§2Glowing!",
   "effect.nukacraft.rad_shield": "§9Rad Resistance ",
   "item.nukacraft.radx": "Rad-X",
