--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -82,6 +82,9 @@
   "block.nukacraft.moss_whitebricks": "Mossy White Bricks",
   "block.nukacraft.whitebricks_stairs": "White Brick Stairs",
   "block.nukacraft.smooth_brick": "Smooth Bricks",
+  "block.nukacraft.steel_bars": "Steel Bars",
+  "block.nukacraft.vtarmor": "Vault-Tec Betonite",
+  "block.nukacraft.armedglass": "Armed Glass Pane",
   "block.nukacraft.whitebricks_slab": "White Brick Slab",
   "item.nukacraft.classic10mm_zapaway": "Classic 10mm Pistol",
   "item.nukacraft.magazine_t1": "Tier 1 Magazine",
