--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -15,6 +15,7 @@
   "block.nukacraft.whitebricks": "Белые Кирпичи",
   "item.nukacraft.abraxo_cleaner": "Чистящее Средство «Абраксо»",
   "item.nukacraft.army_circuit": "Военная Электросхема",
+  "block.nukacraft.steel_bars": "Стальная Решётка",
   "item.nukacraft.electrite_divider": "Электритовый Делитель",
   "item.nukacraft.electrite_sheat": "Электритовая Оболочка",
   "item.nukacraft.quartz_sheat": "Кварцевая Оболочка",
@@ -30,6 +31,7 @@
   "item.nukacraft.piezonucleic_divider": "§6Пъезоядерный Делитель★★★",
   "item.nukacraft.quartz_divider": "§aКварцевый Делитель★",
   "block.nukacraft.moss_whitebricks": "Замшелые Белые Кирпичи",
+  "block.nukacraft.armedglass": "Усиленная Стеклянная Панель",
   "block.nukacraft.whitebricks_stairs": "Белые Кирпичные Ступеньки",
   "block.nukacraft.whitebricks_slab": "Белая Кирпичная Плита",
   "block.nukacraft.smooth_brick": "Гладкая Плитка",
@@ -277,6 +279,7 @@
   "item.nukacraft.crackberry": "Ягода-Хлопушка",
   "item.nukacraft.bombberry": "Бомбо-Ягода",
   "item.nukacraft.muttfruit": "Мутафрукт",
+  "block.nukacraft.vtarmor": "Бетонит Волт-Тек",
   "item.nukacraft.fusionfruit": "Расплавленный Фрукт",
   "item.nukacraft.sittbean": "Стручок Илофасоли",
   "block.nukacraft.bloodleaf": "Куст Кроволиста",
