Added raider types, ride PA goal fix

--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -353,6 +353,10 @@
   "item.nukacraft.tato_salad": "Tato Salad",
   "item.nukacraft.sittsoup": "Sitt Soup",
   "item.nukacraft.sittpuree": "Sitt Puree",
+
+  "item.nukacraft.raider_spawn_egg": "Raider spawn egg",
+  "item.nukacraft.deathclaw_spawn_egg": "Deathclaw spawn egg",
+
   "tooltip.nukacraft.regen": "§9Regeneration ",
   "effect.nukacraft.speed": "§9Speed ",
 
