PA gun hold animation

--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -354,8 +354,8 @@
   "item.nukacraft.sittsoup": "Sitt Soup",
   "item.nukacraft.sittpuree": "Sitt Puree",
 
-  "item.nukacraft.raider_spawn_egg": "Raider spawn egg",
-  "item.nukacraft.deathclaw_spawn_egg": "Deathclaw spawn egg",
+  "item.nukacraft.raider_spawn_egg": "Raider Spawn Egg",
+  "item.nukacraft.deathclaw_spawn_egg": "Deathclaw Spawn Egg",
 
   "tooltip.nukacraft.regen": "§9Regeneration ",
   "effect.nukacraft.speed": "§9Speed ",
